feat: make scope a string, deprecate enum (#27)
* feat: make scope a string, deprecate enum

* docs: rename scopefilter variable